--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 /*  your css code here. If applicable */
+		body{
+            padding: 30px 20px;
+            background-color: #f5f5f5;
+        }
+        .content{
+            margin: 20px 0;
+            padding: 10px;
+            background-color: white;
+            display: flex;
+            justify-content: space-between;
+        }
+        p{
+            align-self: flex-start;
+        }
+        i{
+            align-self: flex-end;
+        }
